--- a/_layouts/home2.html
+++ b/_layouts/home2.html
@@ -10,7 +10,7 @@ layout: page
   <div class="row">
 
   {% for post in posts %}
-  <article class="col">
+  <div class="col">
 
     {%- capture thumbnail -%}
       {% if post.thumbnail-img %}
