--- a/_layouts/home2.html
+++ b/_layouts/home2.html
@@ -1,42 +1,66 @@
 ---
 layout: page
 ---
-
 {{ content }}
 
 {% assign posts = paginator.posts | default: site.posts %}
+{% assign openrow = false %}
+{% assign closerow = false %}
+{% assign maxcol = site.maxcols %}
 
 <div class="container">
-  <div class="row">
-
+    
   {% for post in posts %}
-  <div class="col">
-
-    {%- capture thumbnail -%}
-      {% if post.thumbnail-img %}
-        {{ post.thumbnail-img }}
-      {% elsif post.cover-img %}
-        {% if post.cover-img.first %}
-          {{ post.cover-img[0].first.first }}
-        {% else %}
-          {{ post.cover-img }}
-        {% endif %}
-      {% else %}
-      {% endif %}
-    {% endcapture %}
-    {% assign thumbnail=thumbnail | strip %}
-
-    {% if thumbnail != "" %}
-    <div class="post-image post-image-short">
-      <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
-        <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
-      </a>
-    </div>
+  
+     {% assign remainder = forloop.index | modulo:maxcol %}
+     {% if forloop.first %}
+       {% assign openrow = true %}
+     {% elsif remainder == 1 %}
+       {% assign openrow = true %}
+     {% else %}
+       {% assign openrow = false %}
+     {% endif %}
+    
+    {% if openrow == true %}
+    <div class="row">
     {% endif %}
 
-   </div>
-  {% endfor %}
-</div>
+      <div class="col">
+      {%- capture thumbnail -%}
+        {% if post.thumbnail-img %}
+          {{ post.thumbnail-img }}
+        {% elsif post.cover-img %}
+          {% if post.cover-img.first %}
+            {{ post.cover-img[0].first.first }}
+          {% else %}
+            {{ post.cover-img }}
+          {% endif %}
+        {% else %}
+        {% endif %}
+      {% endcapture %}
+      {% assign thumbnail=thumbnail | strip %}
+
+      {% if thumbnail != "" %}
+      <div class="post-image post-image-small">
+        <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
+          <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
+        </a>
+      </div>
+      {% endif %}
+     </div>
+
+   {% if forloop.last %}
+     {% assign closerow = true %}
+   {% elsif remainder == 0 %}
+     {% assign closerow = true %}
+   {% else %}
+     {% assign closerow = false %}
+   {% endif %}
+  {% if closerow == true %}
+    </div>
+  {% endif %}
+   
+{% endfor %}            
 </div>
 
 {% if paginator.total_pages > 1 %}
