--- a/_layouts/home2.html
+++ b/_layouts/home2.html
@@ -6,7 +6,7 @@ layout: page
 {% assign posts = paginator.posts | default: site.posts %}
 {% assign openrow = false %}
 {% assign closerow = false %}
-{% assign maxcol = site.maxcols %}
+{% assign maxcol = site.maxcols | defaut: 3 %}
 
 <div class="container">
     
