--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+.intro-header .page-heading h1 {
+  font-family: 'Open Sans', sans-serif;
 .avatar-img-border {
   box-shadow: none !important;
 }
