--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -2,6 +2,8 @@
 
 .intro-header .page-heading h1 {
   font-family: 'Open Sans', sans-serif;
+}
+
 .avatar-img-border {
   box-shadow: none !important;
 }
